# tari-wallet-benchmarks

./: .gitignore  Cargo.toml  LICENSE  README.md  RESULT_PROFILE_SCHEMA.json  RUNBOOK.md  build.rs  harness-prefunding.toml  harness.toml.example  sgconfig.yml
.agents/skills/: tari-wallet-benchmarks-implementation-review.md
.github/workflows/: ci.yml
analysis/: DESIGN.md  FINDINGS.md  FUNDING.md  PLAN_AUDIT.md  SUBMISSION_REVIEW.md  baseline-20260714-audit.md
baselines/: README.md  esmeralda_baseline.json  esmeralda_baseline.summary.md
patches/: minotari-exact-output-locking.patch  minotari-fixed-range-scan.patch  minotari-wallet-password-env.patch  payment-processor-fee-rate.patch
rules/: no-hidden-utxo-partitioning.yml  no-s4-dispatch-sleep.yml  no-scenario-backoff.yml  no-scenario-retry.yml  no-wallet-state-repair.yml
scripts/: correct-profile.py  fetch-minotari-cli.sh  fetch-payment-processor.sh
src/: build_manifest.rs  cli.rs  config.rs  env_capture.rs  guards.rs  lib.rs  live_minotari.rs  main.rs  managed_process.rs  modes.rs  payment_processor.rs  result_profile.rs  runner.rs  seeds.rs  versions.rs
src/live_minotari/: mode1.rs  mode2.rs  mode3.rs  scan.rs  verification.rs
src/profile_validation/: mod.rs
tests/: harness.rs
