[package]
name = "wallet-bench"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/tzmWW/tari-wallet-benchmarks"

[features]
default = []
live-minotari = ["dep:minotari"]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
curve25519-dalek = "=5.0.0-pre.6"
hex = "0.4.3"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"], default-features = false }
rusqlite = "0.37.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sysinfo = "0.37.0"
tari_common = "=5.3.1-pre.0"
tari_common_types = "=5.3.1-pre.0"
tari_crypto = { version = "0.23", features = ["borsh"] }
tari_transaction_components = "=5.3.1-pre.0"
tari_utilities = { version = "0.10", features = ["std"] }
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.8"
url = "2.5.7"

minotari = { git = "https://github.com/tari-project/minotari-cli", rev = "360c4848a54d65fd710266233cc9277b0f785e74", package = "minotari", optional = true }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
tempfile = "3.23.0"
